--- a/rescue.html
+++ b/rescue.html
@@ -25,7 +25,7 @@
       <ul class="nav_links">
         <li class="nav_item"><a href="index.html">Home</a></li>
         <li class="nav_item current"><a href="rescue.html">Rescue Story</a></li>
-        <li class="nav_item"><a href="products.html">Must Have Products</a></li>
+        <li class="nav_item"><a href="products.html">Must Haves</a></li>
         <li class="nav_item"><a href="blog.html">Blog</a></li>
       </ul>
     </nav>
