--- a/products.html
+++ b/products.html
@@ -40,7 +40,7 @@
     <!-- Grid Starts Here -->
     <div class="container">
       <div class="product">
-        <img class="product__image" src="images/p_carrots.jpeg"></img>
+        <img class="product__image" src="images/p_carrots.jpeg" alt="carrots"></img>
         <div class="product__name">
           <p>
             <a href="https://www.chewy.com/olewo-digestive-health-anti-diarrhea/dp/158593">Olewo Carrots</a>
@@ -51,7 +51,7 @@
         </div>
       </div>
       <div class="product">
-        <img class="product__image" src="images/p_beets.jpg"></img>
+        <img class="product__image" src="images/p_beets.jpg" alt="beets" ></img>
         <div class="product__name">
           <p>
             <a href="https://www.chewy.com/olewo-itch-allergy-relief-dehydrated/dp/158597">Olewo Beets</a>
@@ -62,7 +62,7 @@
         </div>
       </div>
       <div class="product">
-        <img class="product__image" src="images/p_ziwi.jpeg"></img>
+        <img class="product__image" src="images/p_ziwi.jpeg" alt="ziwi food" ></img>
         <div class="product__name">
           <p>
             <a href="https://www.chewy.com/ziwi-peak-lamb-recipe-canned-dog-food/dp/141887">Ziwi Canned Food</a>
@@ -73,7 +73,7 @@
         </div>
       </div>
       <div class="product">
-        <img class="product__image" src="images/p_openfarm.jpg"></img>
+        <img class="product__image" src="images/p_openfarm.jpg" alt="openfarm dog food" ></img>
         <div class="product__name">
           <p>
             <a href="https://openfarmpet.com/collections/dry-dog-food">Open Farm Dog Food</a>
@@ -89,7 +89,7 @@
     <h2 id="treat">Treat</h2>
     <div class="container">
       <div class="product">
-        <img class="product__image" src="images/p_purebite.jpg"></img>
+        <img class="product__image" src="images/p_purebite.jpg" alt="purebites chicken" ></img>
         <div class="product__name">
           <p>
             <a href="https://www.chewy.com/purebites-chicken-breast-freeze-dried/dp/53161">Purebites Chicken</a>
@@ -100,7 +100,7 @@
         </div>
       </div>
       <div class="product">
-        <img class="product__image" src="images/p_instinct.jpg"></img>
+        <img class="product__image" src="images/p_instinct.jpg" alt="instinct" ></img>
         <div class="product__name">
           <p>
             <a href="https://www.chewy.com/instinct-freeze-dried-raw-boost/dp/170071">Instinct Pumpkin</a>
@@ -111,7 +111,7 @@
         </div>
       </div>
       <div class="product">
-        <img class="product__image" src="images/p_k9.jpeg"></img>
+        <img class="product__image" src="images/p_k9.jpeg" alt="k9 treat" ></img>
         <div class="product__name">
           <p>
             <a href="https://www.chewy.com/k9-natural-healthy-snacks-green/dp/118457">K9 Green Mussels</a>
@@ -122,7 +122,7 @@
         </div>
       </div>
       <div class="product">
-        <img class="product__image" src="images/p_ziwitreat.jpeg"></img>
+        <img class="product__image" src="images/p_ziwitreat.jpeg" alt="ziwi treat" ></img>
         <div class="product__name">
           <p>
             <a href="https://www.chewy.com/ziwi-good-dog-rewards-air-dried-beef/dp/157984">Ziwi Beef Treat</a>
@@ -141,7 +141,7 @@
         <img class="product__image" src="images/p_zesty.jpeg"></img>
         <div class="product__name">
           <p>
-            <a href="https://www.chewy.com/zesty-paws-advanced-11-in-1-chicken/dp/174565">Zesty Paws 11-in-1</a>
+            <a href="https://www.chewy.com/zesty-paws-advanced-11-in-1-chicken/dp/174565" alt="zesty paws 11-in-1" >Zesty Paws 11-in-1</a>
           </p>
         </div>
         <div class="product__price">
@@ -149,7 +149,7 @@
         </div>
       </div>
       <div class="product">
-        <img class="product__image" src="images/p_purina.jpg"></img>
+        <img class="product__image" src="images/p_purina.jpg" alt="purina probiotics" ></img>
         <div class="product__name">
           <p>
             <a href="https://www.chewy.com/zesty-paws-advanced-11-in-1-chicken/dp/174565">Purina Probiotics</a>
@@ -160,7 +160,7 @@
         </div>
       </div>
       <div class="product">
-        <img class="product__image" src="images/p_zpcoconut.jpg"></img>
+        <img class="product__image" src="images/p_zpcoconut.jpg"alt="zesty paws coconut" ></img>
         <div class="product__name">
           <p>
             <a href="https://www.chewy.com/zesty-paws-core-elements-coconut-oil/dp/156813">Zesty Paws Coconut Oil</a>
@@ -171,7 +171,7 @@
         </div>
       </div>
       <div class="product">
-        <img class="product__image" src="images/p_zpomega.jpg"></img>
+        <img class="product__image" src="images/p_zpomega.jpg"alt="zesty paws omega" ></img>
         <div class="product__name">
           <p>
             <a href="https://www.chewy.com/zesty-paws-core-elements-omega/dp/133662">Zesty Paws Omege Bites</a>
