--- a/products.html
+++ b/products.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="css/html5reset.css">
   <link rel="stylesheet" type="text/css" href="css/starter.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  <link rel="favicon" type="image/png" href="images/logo 1.png"/>
+  <link rel="favicon" type="image/png" href="images/logo 1.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Arvo:ital,wght@0,400;0,700;1,400;1,700&display=swap"
@@ -51,7 +51,7 @@
         </div>
       </div>
       <div class="product">
-        <img class="product__image" src="images/p_beets.jpg" alt="beets" ></img>
+        <img class="product__image" src="images/p_beets.jpg" alt="beets"></img>
         <div class="product__name">
           <p>
             <a href="https://www.chewy.com/olewo-itch-allergy-relief-dehydrated/dp/158597">Olewo Beets</a>
@@ -62,7 +62,7 @@
         </div>
       </div>
       <div class="product">
-        <img class="product__image" src="images/p_ziwi.jpeg" alt="ziwi food" ></img>
+        <img class="product__image" src="images/p_ziwi.jpeg" alt="ziwi food"></img>
         <div class="product__name">
           <p>
             <a href="https://www.chewy.com/ziwi-peak-lamb-recipe-canned-dog-food/dp/141887">Ziwi Canned Food</a>
@@ -73,7 +73,7 @@
         </div>
       </div>
       <div class="product">
-        <img class="product__image" src="images/p_openfarm.jpg" alt="openfarm dog food" ></img>
+        <img class="product__image" src="images/p_openfarm.jpg" alt="openfarm dog food"></img>
         <div class="product__name">
           <p>
             <a href="https://openfarmpet.com/collections/dry-dog-food">Open Farm Dog Food</a>
@@ -89,7 +89,7 @@
     <h2 id="treat">Treat</h2>
     <div class="container">
       <div class="product">
-        <img class="product__image" src="images/p_purebite.jpg" alt="purebites chicken" ></img>
+        <img class="product__image" src="images/p_purebite.jpg" alt="purebites chicken"></img>
         <div class="product__name">
           <p>
             <a href="https://www.chewy.com/purebites-chicken-breast-freeze-dried/dp/53161">Purebites Chicken</a>
@@ -100,7 +100,7 @@
         </div>
       </div>
       <div class="product">
-        <img class="product__image" src="images/p_instinct.jpg" alt="instinct" ></img>
+        <img class="product__image" src="images/p_instinct.jpg" alt="instinct"></img>
         <div class="product__name">
           <p>
             <a href="https://www.chewy.com/instinct-freeze-dried-raw-boost/dp/170071">Instinct Pumpkin</a>
@@ -111,7 +111,7 @@
         </div>
       </div>
       <div class="product">
-        <img class="product__image" src="images/p_k9.jpeg" alt="k9 treat" ></img>
+        <img class="product__image" src="images/p_k9.jpeg" alt="k9 treat"></img>
         <div class="product__name">
           <p>
             <a href="https://www.chewy.com/k9-natural-healthy-snacks-green/dp/118457">K9 Green Mussels</a>
@@ -122,7 +122,7 @@
         </div>
       </div>
       <div class="product">
-        <img class="product__image" src="images/p_ziwitreat.jpeg" alt="ziwi treat" ></img>
+        <img class="product__image" src="images/p_ziwitreat.jpeg" alt="ziwi treat"></img>
         <div class="product__name">
           <p>
             <a href="https://www.chewy.com/ziwi-good-dog-rewards-air-dried-beef/dp/157984">Ziwi Beef Treat</a>
@@ -132,16 +132,17 @@
           <p>$9.29
         </div>
       </div>
-      </div>
+    </div>
 
-    
-      <h2 id="health">Health</h2>
-      <div class="container">
+
+    <h2 id="health">Health</h2>
+    <div class="container">
       <div class="product">
         <img class="product__image" src="images/p_zesty.jpeg"></img>
         <div class="product__name">
           <p>
-            <a href="https://www.chewy.com/zesty-paws-advanced-11-in-1-chicken/dp/174565" alt="zesty paws 11-in-1" >Zesty Paws 11-in-1</a>
+            <a href="https://www.chewy.com/zesty-paws-advanced-11-in-1-chicken/dp/174565" alt="zesty paws 11-in-1">Zesty
+              Paws 11-in-1</a>
           </p>
         </div>
         <div class="product__price">
@@ -149,7 +150,7 @@
         </div>
       </div>
       <div class="product">
-        <img class="product__image" src="images/p_purina.jpg" alt="purina probiotics" ></img>
+        <img class="product__image" src="images/p_purina.jpg" alt="purina probiotics"></img>
         <div class="product__name">
           <p>
             <a href="https://www.chewy.com/zesty-paws-advanced-11-in-1-chicken/dp/174565">Purina Probiotics</a>
@@ -160,7 +161,7 @@
         </div>
       </div>
       <div class="product">
-        <img class="product__image" src="images/p_zpcoconut.jpg"alt="zesty paws coconut" ></img>
+        <img class="product__image" src="images/p_zpcoconut.jpg" alt="zesty paws coconut"></img>
         <div class="product__name">
           <p>
             <a href="https://www.chewy.com/zesty-paws-core-elements-coconut-oil/dp/156813">Zesty Paws Coconut Oil</a>
@@ -171,7 +172,7 @@
         </div>
       </div>
       <div class="product">
-        <img class="product__image" src="images/p_zpomega.jpg"alt="zesty paws omega" ></img>
+        <img class="product__image" src="images/p_zpomega.jpg" alt="zesty paws omega"></img>
         <div class="product__name">
           <p>
             <a href="https://www.chewy.com/zesty-paws-core-elements-omega/dp/133662">Zesty Paws Omege Bites</a>
