--- a/rescue.html
+++ b/rescue.html
@@ -43,13 +43,17 @@
     <div class="parallax2"></div>
     <br>
 
-    <p> One of the neighbor send out a post online to put me up for adoption and hopefully will get me out of the streets. My parents contacted her and decided to adopt me from the U.S. That's the day I was taken out from the street and stayed with a foster to wait for my flight to New York City!
+    <p> One of the neighbor send out a post online to put me up for adoption and hopefully will get me out of the
+      streets. My parents contacted her and decided to adopt me from the U.S. That's the day I was taken out from the
+      street and stayed with a foster to wait for my flight to New York City!
     </p>
 
     <div class="parallax3"></div>
     <br>
 
-    <p> However, my trip to New York City was not an easy one. It was March 2020, the beginning of the pandemic. All flights are halted. I spent half a year with my foster before I hopped on the plane. This is my first picture when I landed at JFK airport. 
+    <p> However, my trip to New York City was not an easy one. It was March 2020, the beginning of the pandemic. All
+      flights are halted. I spent half a year with my foster before I hopped on the plane. This is my first picture when
+      I landed at JFK airport.
     </p>
 
 
