--- a/products.html
+++ b/products.html
@@ -138,10 +138,10 @@
     <h2 id="health">Health</h2>
     <div class="container">
       <div class="product">
-        <img class="product__image" src="images/p_zesty.jpeg"></img>
+        <img class="product__image" src="images/p_zesty.jpeg" alt="zesty paws 11-in-1"></img>
         <div class="product__name">
           <p>
-            <a href="https://www.chewy.com/zesty-paws-advanced-11-in-1-chicken/dp/174565" alt="zesty paws 11-in-1">Zesty
+            <a href="https://www.chewy.com/zesty-paws-advanced-11-in-1-chicken/dp/174565">Zesty
               Paws 11-in-1</a>
           </p>
         </div>
